manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-app
  labels:
    app: dashboard-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dashboard-app
  template:
    metadata:
      labels:
        app: dashboard-app
    spec:
      containers:
        - name: dashboard-app
          image: ghcr.io/eonuallain/ta-dashboard-be:main
          ports:
            - containerPort: 5000
