manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
spec:
  selector:
    app: dashboard-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
